# snake-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: food.cpp  food.h  snake.cpp  snake.h
